Implement statistic worker and request to gravatar
